# md-preview-app

./: .gitignore  PUBLISH.md  README.md  index.html  package-lock.json  package.json  requirements.md  tauri-signing.pub
.github/workflows/: build-macos.yml  build-windows.yml
scripts/: generate-latest-json.py  publish-manual.sh  release.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EditorPane.vue  FileTree.vue  PreviewPane.vue  StatusBar.vue  TocPanel.vue  Toolbar.vue  UpdateChecker.vue
src/composables/: useFile.ts  useMarkdown.ts  useTheme.ts
src/stores/: editor.ts
