[package]
name = "md-preview-app"
version = "1.0.0"
description = "MD Preview - Markdown Editor & Preview"
authors = ["dt"]
edition = "2021"

[lib]
name = "md_preview_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
objc = "0.2"
libc = "0.2"

